--- a/index.html
+++ b/index.html
@@ -10,28 +10,43 @@
   <body>
     <div class="container">
        <header class="page-header">
-        <p>Контакты</p>
-        <p>8(901)-748-52-33</p>
+        <a href="mailto:akhmedoff.sanan@yandex.ru" class="header-email">akhmedoff.sanan@yandex.ru</a>
+        <a href="tel:+79017485233" class="header-phone">+7 901 748 52 33</a>
         <a href="https://t.me/sananakhmedov">Я в теллеграмме</a>
       </header>
 
     <section class="hero-image">
-      <h1 class="heading">Неопознанный Енот</h1>
+      <h1 class="heading"> Ахмедов Санан </h1>
       <p>Junior верстальщик</p>
     </section>
 
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+      <img src="files/user.jpg" width="480" height="640" alt="Фотография недоверстальщика">
+      </figure>
       <h3>Я Ахмедов Санан</h3>
       <p>Учусь веб программированию</p>
       <h3>Чем могу быть полезен</h3>
       <p>Готов сверстать для вас что-нибудь за хороший отзыв </p>
     </section>
+    <div class="skills">
+  <h3>Мои навыки</h3>
+  <dl class="skills-list">
+    <dt class="skill-html">HTML</dt>
+    <dd class="level"><div style="width: 100%; text-align: center">100%</div></dd>
+    <dt class="skill-css">CSS</dt>
+    <dd class="level"><div style="width: 40%;">40%</div></dd>
+  </dl>
+</div>
 
     <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
-
+    <figure class="project-image">
+      <img src="files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+    </figure>
       <h3>Сайт инструктора Кекса</h3>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
       <p>Небольшой лендинг о школе для начинающих.</p>
 
       <h3>Блог начинающего верстальщика</h3>
@@ -39,7 +54,8 @@
     </section>
 </div>
     <footer class="page-footer">
-      Контакты в подвале
+      <a href="mailto:akhmedoff.sanan@yandex.ru" class="footer-email">akhmedoff.sanan@yandex.ru</a>
+      <a href="tel:+79017485233" class="footer-phone">+7 901 748 52 33</a>
     </footer>
   </body>
 </html>
